@@ -2,6 +2,9 @@
 
 	* ChangeLog.pre-2.1: Add missing attribution.
 	* NEWS: Resync with NEWS from the 2.0 branch.
+	* text.c (execute_command): Call terminal_init() instead of just
+	disable_signals() after executing the command, as the command
+	may have changed the terminal settings.
 
 2007-12-10  David Lawrence Ramsey  <pooka109@gmail.com>
 
